	* GNUmakefile (objdir): Absolutize the objdir path.
	* libdtrace/Build (DRTI_OBJ): BUILD_DRTI_OBJ is now an absolute
	path.
	* test/triggers/Build (link-trigger): So is this link target.
	* test/utils/Build (link-test-util): And this one.

	* Makefunctions (cmd-template): Support target-specific LDFLAGS.
	(shlib-template): Likewise.
	* README.build-system: Document it.

2013-01-17  Nick Alcock  <nick.alcock@oracle.com>

	* libproc/Pcontrol.h (ps_prochandle): Add ptraced.
	* libproc/Pcontrol.c (Pcreate): Set it.
	(Prelease): Likewise.
	(Psetrun): Likewise.

	* libproc/Psymtab.c (PTRACE_GETMAPFD): Add definition: this is not
	in glibc yet.
	(MA_RWX): Remove, unused.
	(read_dynamic_phdr32): Likewise.
	(read_dynamic_phdr64): Likewise.
	(file_differs): Likewise.
	(fake_elf): Likewise.
	(build_fake_elf): Likewise.
	(Pbuild_file_symtab): Rewrite ELF file-acquisition code to use
	PTRACE_GETMAPFD rather than file opening and build_fake_elf().
	Remove support for building symtabs of dead processes.  Do not
	assume that we can always acquire all ELF objects via
	/proc/$pid/exe: this is not true of any mapping other than the
	executable's.
	* libproc/Psymtab_machelf32.c: Remove, unused.
	* libproc/Psymtab_machelf64.c: Likewise.
	* libproc/Psymtab_machelf.h: Likewise.
	* libproc/Build: Adjust.

	* include/sys/elf_amd64.h (R_*, ELF_AMD64_*): Drop relocation
	constants with nonstandard names.
	(SHT_*, SHF_*, SHN_*): Unused, remove.
	* libdtrace/dt_link.c (prepare_elf64): Use standard name for
	relocation constant.
	* libdtrace/dt_ident.c: Remove unused header.
	* include/sys/procfs.h: Remove unused junk.

	* libproc/Pcontrol.h (sym_tbl): Remove unused sym_elf, sym_elfmem.
	(file_info): Remove unused file_elfmem.  Dynamically size
	file_pname.
	(PRMAPSZ): Remove, nonportable, inapplicable to Linux.
	* include/sys/procfs.h (PRMAPSZ): Likewise.
	(prmap): Dynamically size pr_mapname.  Drop pr_shmid, pr_filler;
	add pr_inum.
	(MA_*): Remove all but MA_READ, MA_WRITE, MA_EXEC.