@@ -31,7 +31,7 @@ $(1)_SOURCES = $(1).c
 $(1)_POST := link-test-util
 $(1)_NOCFLAGS := --coverage
 $(1)_NOLDFLAGS := --coverage
-$(1)_DEPS = libdtrace.so libproc.a libport.a
+$(1)_DEPS = libdtrace.so build-libproc.a libport.a
 $(1)_LIBS = -L$(objdir) -ldtrace-ctf -ldtrace -lproc -lport -lelf -lz -lrt -lpthread -ldl
 
 clean::
