@@ -13,6 +13,13 @@
 	(shlib-template): Likewise.
 	* README.build-system: Document it.
 
+	* test/Build: Run test/utils/Build.
+	* test/utils/Build: Depend on build .a files where necessary.
+	* test/utils/baddof.c: Modernize includes.  Use memcpy(), not
+	bcopy().
+	* test/utils/badioctl.c: Modernize includes. Use gettimeofday(),
+	not gethrtime().
+
 2013-01-17  Nick Alcock  <nick.alcock@oracle.com>
 
 	* libproc/Pcontrol.h (ps_prochandle): Add ptraced.
